--- a/at_chat_flutter/pubspec.yaml
+++ b/at_chat_flutter/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   at_lookup: ^3.0.1
   pedantic: ^1.11.0
   #Picker
-  file_picker: ^4.0.0
+  file_picker: ^3.0.2+2
 
 dependency_overrides:
   at_client_mobile:
