--- a/at_contacts_flutter/pubspec.yaml
+++ b/at_contacts_flutter/pubspec.yaml
@@ -16,10 +16,28 @@ dependencies:
   pedantic: ^1.11.0
 
   at_client_mobile: ^2.0.3
-  at_commons: ^2.0.3
-  at_lookup: ^2.0.3
-  at_contact: ^2.0.2
+  at_commons: ^3.0.0
+  at_lookup: ^3.0.1
+  at_contact:
+    git:
+      url: https://github.com/atsign-foundation/at_libraries.git
+      path: at_contact
+      ref: trunk
   at_common_flutter: ^2.0.1
+
+dependency_overrides:
+  at_client_mobile:
+    git:
+      url: https://github.com/atsign-foundation/at_client_sdk.git
+      path: at_client_mobile
+      ref: trunk
+
+  at_client:
+    git:
+      url: https://github.com/atsign-foundation/at_client_sdk.git
+      path: at_client
+      ref: trunk
+
 
 dev_dependencies:
   flutter_test:
