--- a/at_onboarding_flutter/pubspec.yaml
+++ b/at_onboarding_flutter/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/atsign-foundation/at_widgets
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  flutter: '>=1.20.0'
 
 dependencies:
   flutter:
@@ -24,14 +24,16 @@ dependencies:
   at_client: ^2.0.1
   at_commons: ^3.0.0
   at_backupkey_flutter:
-    path: ../at_backupkey_flutter
+    git:
+      url: https://github.com/XavierChanth/at_widgets.git
+      path: at_backupkey_flutter
+      ref: feat/chat-delete
   at_client_mobile: ^2.0.2
   at_server_status:
     git:
       url: https://github.com/atsign-foundation/at_libraries.git
       path: at_server_status
       ref: trunk
- 
 
 dev_dependencies:
   flutter_test:
