--- a/at_chat_flutter/pubspec.yaml
+++ b/at_chat_flutter/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/atsign-foundation/at_widgets
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  flutter: '>=1.20.0'
 
 dependencies:
   flutter:
@@ -22,7 +22,7 @@ dependencies:
   at_lookup: ^3.0.1
   pedantic: ^1.11.0
   #Picker
-  file_picker: ^3.0.2+2
+  file_picker: ^4.0.0
 
 dependency_overrides:
   at_client_mobile:
